<resources>
    <string name="app_name">app1</string>
    <string name="detect">DETECT</string>
    <string name="clear">CLEAR</string>
    <string name="textViewContent">Hello World!</string>
    <string name="updatedText">Detected</string>
    <string name="clearedText">Hello World!</string>
    <string name="textViewContent1">Details</string>
    <string name="answer_yes_button">YES</string>
    <string name="answer_no_button">NO</string>
    <string name="users_name_hint">Enter Your Name</string>
    <string name="settings">Settings</string>
    <string name="exit_the_app">Exit</string>
    <string name="refresh">Refresh</string>
</resources>
