<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.phaniavi.phani.app1.MainActivity" >

    <group android:checkableBehavior="all">

    <item
        android:id="@+id/action_settings"
        android:title="@string/settings"
        app:showAsAction="never"
        android:orderInCategory="100"/>

    <item
        android:id="@+id/refresh"
        android:title="@string/refresh"
        app:showAsAction="never"
        android:orderInCategory="99"/>

    <item
        android:id="@+id/exit_the_app"
        android:title="@string/exit_the_app"
        app:showAsAction="ifRoom|withText"
        android:icon="@drawable/ic_launcher_background"/>

    </group>

</menu>