<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.phaniavi.phani.app1.Main2Activity"
    android:orientation="vertical"
    android:gravity="center">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textViewContent1"
        android:textSize="@dimen/text_view_details_size" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/users_name_edit_text"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:inputType="textCapWords"
            android:hint="@string/users_name_hint"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/answer_yes_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/answer_yes_button"
            android:onClick="onYesButtonClick"
            style="@style/Base.TextAppearance.AppCompat.Button"/>

        <Button
            android:id="@+id/answer_no_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/answer_no_button"
            android:onClick="onNoButtonClick"
            style="@style/Base.TextAppearance.AppCompat.Button"/>

    </LinearLayout>

</LinearLayout>
